# lekiwi-vla

./: .gitignore  LEIKIWI_PHASE190.md  LEIKIWI_PHASE191.md  LEIKIWI_PHASE192.md  LEIKIWI_PHASE194.md  LEIKIWI_PHASE195.md  LEIKIWI_PHASE196.md  LEIKIWI_PHASE212.md  LEIKIWI_PHASE221.md  LEIKIWI_PHASE222.md  LEIKIWI_PHASE227.md  LEIKIWI_PHASE255.md  LEIKIWI_PHASE256.md  LEIKIWI_PHASE257.md  LEIKIWI_PHASE260.md  LEIKIWI_PHASE265.md  LEIKIWI_PHASE266.md  LEIKIWI_PHASE267.md  LEIKIWI_PHASE268.md  LEIKIWI_PHASE272.md  LEIKIWI_PHASE273.md  LEIKIWI_PHASE274.md  LEIKIWI_PHASE278.md  LEIKIWI_PHASE280.md  LEIKIWI_PHASE281.md  LEIKIWI_PHASE282.md  LEIKIWI_PHASE283.md  LEIKIWI_PHASE284.md  LEIKIWI_PHASE285.md  LEIKIWI_PHASE286.md  LEIKIWI_ROS2_PLATFORM_PROGRESS.md  LEKIWI_ROS2_PLATFORM_PROGRESS.md  MUJOCO_LOG.TXT  MUJOCO_LOG.TXT.bak  README.md  analyze_goal_dist.py  check_model.py  ctf_security_audit.py  eval_compare.py  eval_phase67_stochastic.py  (+37 more)
client/: hardware_interface.py
docs/: BENCHMARK_RESULTS.md  LEKIWI_ROS2_PLATFORM_PROGRESS.md  PROJECT_MAP.md  VLA_COMPARISON.md
lekiwi_urdf_demo_extracted/: actions.csv  actions.npy  states.csv  states.npy
policies/: lerobot_flow_matching.yaml
results/: phase130_goal_conditioned_eval.json  phase133_eval.json  phase134_eval.json  phase153_eval.json  phase155b_eval.json  phase156_matched_seed123.json  phase156_matched_seed42.json  phase156_matched_seed42_restricted.json  phase157_matched_rerun.json  phase173_diagnostic_20260419_0442.json  phase174_eval_20260419_0536.json  phase175_diagnostic_20260419_0600.json  phase176_20260419_0726.json  phase176_w1flip_20260419_0729.json  phase181_quick_eval.json  phase182_matched_eval.json  phase186_eval.json  phase191_fast_eval.json  phase195_fixed_sweep_1776613748.json  phase195_sweep_output.txt  (+19 more)
src/lekiwi_ros2_bridge/: __init__.py  bridge_node.py  camera_adapter.py  ctf_integration.py  lekiwi_sim_loader.py  package.xml  setup.py  vla_policy_node.py
src/lekiwi_ros2_bridge/config/: hardware.yaml
src/lekiwi_ros2_bridge/launch/: bridge.launch.py  ctf.launch.py  full.launch.py  real_mode.launch.py  vla.launch.py
src/lekiwi_ros2_bridge/lekiwi_ros2_bridge/: __init__.py  bridge_node.py  lekiwi_sim_loader.py  policy_guardian.py  real_hardware_adapter.py  replay_node.py  security_monitor.py  vla_policy_node.py
src/lekiwi_ros2_bridge/scripts/: bridge_node
src/lekiwi_ros2_bridge/src/: vla_policy_node.py
src/lekiwi_ros2_bridge/test/: test_bridge.py
(+160 files in other folders)
