<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package-format3.xsd" ?>
<package format="3">
  <name>lekiwi_ros2_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 ↔ MuJoCo bridge node for LeKiWi VLA research platform</description>
  <maintainer email="research@lekiwi.local">LeKiWi Research</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export></export>
</package>
