<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>lekiwi_ros2_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 ↔ MuJoCo LeKiWi simulation bridge</description>
  <maintainer email="lekiwi@example.com">LeKiWi Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
